# cassette

./: .gitignore  DESIGN-PARTNERS.md  GOLIVE.md  GTM.md  LAUNCH.md  LICENSE  PRICING.md  PUBLISHING.md  README.md  SPEC.md  STRATEGY.md
.github/workflows/: release-npm.yml  release-python.yml
backend/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
backend/src/: billing.ts  checkout.ts  drift.ts  github.ts  githubAuth.ts  index.ts  registry.ts  types.ts  verify.ts  welcome.ts
examples/: drift-demo.txt
examples/ci/: cassette.yml
examples/python/: test_example.py
examples/typescript/: example.test.ts
gateway/: package.json  wrangler.toml
gateway/src/: index.ts  match.ts  store.ts  types.ts
legal/: DPA.md  PRIVACY.md  TERMS.md
sdk/python/: README.md  pyproject.toml
sdk/python/cassette/: __init__.py  cli.py  drift.py  recorder.py  registry.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts  recorder.ts
site/: index.html
site/docs/: index.html
