[project]
name = "cassette-sdk"
version = "0.1.0"
description = "One-call shim to route LLM SDK traffic through the Cassette record/replay gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cassette" }]
keywords = ["llm", "agent", "testing", "record", "replay", "vcr", "openai", "anthropic", "ci"]
dependencies = ["httpx>=0.24"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/NOVUS-STUDIOS-DEV/cassette"
Source = "https://github.com/NOVUS-STUDIOS-DEV/cassette"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cassette"]
